use a common function for proxy scope errors